--- a/AdmonListaCole/src/index.css
+++ b/AdmonListaCole/src/index.css
@@ -1,73 +1,93 @@
-root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
-    font-weight: 400;
 
-    color-scheme: light dark;
-    color: #bf1b88;
-    background-color: #312e2e;
-
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-    font-weight: 500;
-    color: #646cff;
-    text-decoration: inherit;
-}
-
-a:hover {
-    color: #535bf2;
-}
-
-body {
+:root {
+    font-family: 'Acme', sans-serif;
+    background-color: rgba(179, 224, 245, 1);
     margin: 0;
+    width: 100%;
+}
+
+body{
+    background-color: rgba(179, 224, 245, 1);
+}
+
+.logo{
+    width: 15%;
+    height: 15%;
+    border-radius: 50%;
+    margin-top: 30px;
+}
+
+.contentNav{
+    font-family: 'Acme', sans-serif;
     display: flex;
-    place-items: center;
-    min-width: 320px;
-    min-height: 100vh;
+    align-items: center;
+    justify-content: space-between;
+    width: 95%;
+    margin-left:30px;
+    margin-right: 30px;
 }
 
-h1 {
-    font-size: 3.2em;
-    line-height: 1.1;
-}
-
-button {
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 0.6em 1.2em;
-    font-size: 1em;
-    font-weight: 500;
-    font-family: inherit;
-    background-color: #bf1b88;
+.buttonnav {
+    background-color: rgba(255, 169, 184, 1);
+    width: 200px;
+    height: 50px;
+    color: #fff;
+    padding: 10px 20px;
+    font-family: 'acme', sans-serif;
+    font-size: 20px;
+    text-shadow: 2px 2px 2px rgb(0, 0, 0);
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 30px;
     cursor: pointer;
-    transition: border-color 0.25s;
 }
 
-button:hover {
-    border-color: #646cff;
+.conf{
+    width: 70px;
+    height: 70px;
 }
 
-button:focus,
-button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
+.list{ 
+    font-family: 'Acme', sans-serif;
+    padding-left: 5%;
+    margin-top: 30px;
 }
 
-@media (prefers-color-scheme: light) {
-    :root {
-        color: #213547;
-        background-color: #ffffff;
-    }
-
-    a:hover {
-        color: #747bff;
-    }
-
-    button {
-        background-color: #f9f9f9;
-    }
+.formList{
+    font-family: 'Acme', sans-serif;
+    background-color: rgba(255, 226, 167, 1);
+    margin-left: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 30px;
+    width: 30%;
+    padding: 30px;
 }
+
+.labelForm{
+    display: block;
+}
+
+.inputForm{ width: 100%;}
+
+.buttonForm {
+    display: block;
+    background-color: rgba(179, 224, 245, 1);
+    width: 120px;
+    height: 50px;
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 3px;
+    color: #fff;
+    padding: 10px 20px;
+    font-family: 'acme', sans-serif;
+    font-size: 20px;
+    text-shadow: 2px 2px 2px rgb(0, 0, 0);
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 30px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+
+}
+
+
