--- a/AdmonListaCole/src/index.css
+++ b/AdmonListaCole/src/index.css
@@ -87,7 +87,10 @@ body{
     border-radius: 30px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+}
 
+.resultForm{
+    background-color: rgba(255, 169, 184, 1);;
 }
 
 
