--- a/AdmonListaCole/src/index.css
+++ b/AdmonListaCole/src/index.css
@@ -78,6 +78,17 @@ body{
     width: 100%;
 }
 
+.liResultForm{
+    display: flex;
+    justify-content:space-between;
+    margin-bottom: 10px;
+    background-color: #fff;
+    border-radius: 5px;
+    border: 1px solid black;
+    padding: 10px;
+
+}
+
 .buttonForm {
     display: block;
     background-color: rgba(179, 224, 245, 1);
@@ -101,6 +112,7 @@ body{
     font-family: 'Acme', sans-serif;
     margin-right: 30px;
     margin-top: 30px;
+    margin-bottom: 30px;
     padding-top: 30px;
     padding-bottom: 30px;
     border: 2px solid rgb(0, 0, 0);
@@ -114,19 +126,47 @@ body{
     padding: 0;
 }
 
-.resultForm li {
-    margin-bottom: 10px;
-    background-color: #fff;
-    border-radius: 5px;
-    border: 1px solid black;
-    padding: 10px;
+
+.buttonDelete{
+    background-color: rgba(255, 226, 167, 1);
+    width: 80px;
+    height: 35px;
+    color: #000000;
+    padding: 5px;
+    margin-right: 10px;
+    font-family: 'acme', sans-serif;
+    font-size: 16px;
+    text-shadow: 2px 2px 2px rgb(255, 255, 255);
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 30px;
+    cursor: pointer;
 }
 
-.resultForm li:hover {
-    background-color: rgba(179, 224, 245, 1);
+.buttonEdit{
+    background-color: rgba(255, 226, 167, 1);
+    width: 80px;
+    height: 35px;
+    color: #000000;
+    padding: 5px;
+    font-family: 'acme', sans-serif;
+    font-size: 16px;
+    text-shadow: 2px 2px 2px rgb(255, 255, 255);
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 30px;
+    cursor: pointer;
+}
+
+.bottonsResultForm{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .buttonForm:hover {
     background-color: rgba(255, 169, 184, 1);
     color: #fff;
+}
+
+.resultForm li:hover {
+    background-color: rgba(179, 224, 245, 1);
 }
